Modified   app/src/main/java/com/international/shopping/view/MainActivity.java Modified   app/src/main/java/com/international/shopping/view/fragment/CarFragment.java Modified   app/src/main/res/layout/fragment_car.xml Modified   baselib/build.gradle Add        app/src/main/java/com/international/shopping/event/SwitchMainTabEvent.java

--- a/app/src/main/res/layout/fragment_car.xml
+++ b/app/src/main/res/layout/fragment_car.xml
@@ -30,6 +30,7 @@
             android:textSize="18dp" />
 
         <Button
+            android:id="@+id/toBuy_btn"
             android:layout_width="wrap_content"
             android:layout_height="35dp"
             android:background="@drawable/shape_login_edittext_bg"
