--- a/session/res/values/strings-chatroom.xml
+++ b/session/res/values/strings-chatroom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
     <!-- chat room -->
     <string name="chat_room">直播间</string>
     <string name="chat_room_message">直播互动</string>
