--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,12 +13,27 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="MainActivityAppTheme" parent="Theme.AppCompat.Light">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/color_titleBarBg</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
     <style name="AppTheme.FullScreen" parent="AppTheme.NoActionBar">
         <!-- 全屏显示，隐藏状态栏 -->
         <item name="android:windowFullscreen">true</item>
         <!-- 解决启动白屏问题 -->
         <item name="android:windowBackground">@drawable/splash</item>
 
+    </style>
+
+    <style name="SearchActivityTheme" parent="AppTheme">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@color/color_30000000</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
