--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,4 +25,9 @@
     <color name="color_515151">#515151</color>
 
     <color name="white">#ffffff</color>
+
+    <color name="color_titleBarBg">#00000000</color>
+
+    <color name="color_30000000">#30000000</color>
+
 </resources>
