--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -32,31 +31,27 @@
                 <View
                     android:id="@+id/div_1"
                     android:layout_width="match_parent"
-                    android:layout_height="0.5dp"
+                    android:layout_height="10dp"
                     android:layout_below="@+id/banner"
                     android:background="@color/color_F1F1F1" />
 
                 <LinearLayout
                     android:id="@+id/category_1"
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_height="70dp"
                     android:layout_below="@+id/div_1"
                     android:orientation="horizontal">
 
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center"
-                        android:layout_weight="1"
-                        android:background="@drawable/selector_item_bg"
-                        android:clickable="true"
-                        android:gravity="center">
+                    <LinearLayout style="@style/HomeCategoryItem">
+
+                        <ImageView
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:src="@drawable/label_jiadian" />
 
                         <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:text="类别1" />
+                            style="@style/HomeCategoryItem_Text"
+                            android:text="家电" />
                     </LinearLayout>
 
                     <View
@@ -64,41 +59,16 @@
                         android:layout_height="match_parent"
                         android:background="@color/color_F1F1F1" />
 
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:background="@drawable/selector_item_bg"
-                        android:clickable="true"
-                        android:gravity="center">
+                    <LinearLayout style="@style/HomeCategoryItem">
+
+                        <ImageView
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:src="@drawable/label_xiebao" />
 
                         <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:text="类别2" />
-
-                    </LinearLayout>
-
-                    <View
-                        android:layout_width="0.5dp"
-                        android:layout_height="match_parent"
-                        android:background="@color/color_F1F1F1" />
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:background="@drawable/selector_item_bg"
-                        android:clickable="true"
-                        android:gravity="center">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:gravity="center"
-                            android:text="类别3" />
+                            style="@style/HomeCategoryItem_Text"
+                            android:text="鞋包" />
 
                     </LinearLayout>
 
@@ -107,19 +77,34 @@
                         android:layout_height="match_parent"
                         android:background="@color/color_F1F1F1" />
 
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:background="@drawable/selector_item_bg"
-                        android:clickable="true"
-                        android:gravity="center">
+                    <LinearLayout style="@style/HomeCategoryItem">
+
+                        <ImageView
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:src="@drawable/label_tushu" />
 
                         <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:text="类别4" />
+                            style="@style/HomeCategoryItem_Text"
+                            android:text="图书音响" />
+
+                    </LinearLayout>
+
+                    <View
+                        android:layout_width="0.5dp"
+                        android:layout_height="match_parent"
+                        android:background="@color/color_F1F1F1" />
+
+                    <LinearLayout style="@style/HomeCategoryItem">
+
+                        <ImageView
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:src="@drawable/label_jiajv" />
+
+                        <TextView
+                            style="@style/HomeCategoryItem_Text"
+                            android:text="家具" />
 
                     </LinearLayout>
 
@@ -135,24 +120,20 @@
                 <LinearLayout
                     android:id="@+id/category_2"
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_height="70dp"
                     android:layout_below="@+id/div_2"
                     android:orientation="horizontal">
 
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center"
-                        android:layout_weight="1"
-                        android:background="@drawable/selector_item_bg"
-                        android:clickable="true"
-                        android:gravity="center">
+                    <LinearLayout style="@style/HomeCategoryItem">
+
+                        <ImageView
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:src="@drawable/label_huazhuangpin" />
 
                         <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:text="类别1" />
+                            style="@style/HomeCategoryItem_Text"
+                            android:text="化妆品" />
                     </LinearLayout>
 
                     <View
@@ -160,41 +141,16 @@
                         android:layout_height="match_parent"
                         android:background="@color/color_F1F1F1" />
 
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:background="@drawable/selector_item_bg"
-                        android:clickable="true"
-                        android:gravity="center">
+                    <LinearLayout style="@style/HomeCategoryItem">
+
+                        <ImageView
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:src="@drawable/label_qiche" />
 
                         <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:text="类别2" />
-
-                    </LinearLayout>
-
-                    <View
-                        android:layout_width="0.5dp"
-                        android:layout_height="match_parent"
-                        android:background="@color/color_F1F1F1" />
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:background="@drawable/selector_item_bg"
-                        android:clickable="true"
-                        android:gravity="center">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:gravity="center"
-                            android:text="类别3" />
+                            style="@style/HomeCategoryItem_Text"
+                            android:text="汽配" />
 
                     </LinearLayout>
 
@@ -203,19 +159,34 @@
                         android:layout_height="match_parent"
                         android:background="@color/color_F1F1F1" />
 
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:background="@drawable/selector_item_bg"
-                        android:clickable="true"
-                        android:gravity="center">
+                    <LinearLayout style="@style/HomeCategoryItem">
+
+                        <ImageView
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:src="@drawable/label_zhubao" />
 
                         <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:text="类别4" />
+                            style="@style/HomeCategoryItem_Text"
+                            android:text="珠宝" />
+
+                    </LinearLayout>
+
+                    <View
+                        android:layout_width="0.5dp"
+                        android:layout_height="match_parent"
+                        android:background="@color/color_F1F1F1" />
+
+                    <LinearLayout style="@style/HomeCategoryItem">
+
+                        <ImageView
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:src="@drawable/label_fenlei" />
+
+                        <TextView
+                            style="@style/HomeCategoryItem_Text"
+                            android:text="分类" />
 
                     </LinearLayout>
 
@@ -232,6 +203,8 @@
                     android:id="@+id/home_recyclerView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@color/color_F1F1F1"
+                    android:paddingRight="5dp"
                     android:layout_below="@+id/div_3" />
 
             </RelativeLayout>
@@ -243,8 +216,8 @@
         android:id="@+id/home_searchView"
         android:layout_width="match_parent"
         android:layout_height="65dp"
+        android:alpha="0.0"
         android:background="@color/main_color"
-        android:alpha="1.0"
         android:orientation="vertical">
 
         <View
@@ -256,14 +229,14 @@
             android:layout_width="match_parent"
             android:layout_height="45dp">
 
-            <TextView
+            <ImageView
                 android:id="@+id/label_1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
-                android:textColor="@color/white"
-                android:text="首页" />
+                android:src="@drawable/btn_saoyisao"
+                android:textColor="@color/white" />
 
             <View
                 android:layout_width="match_parent"
