--- a/app/src/main/res/layout/item_home_fragment.xml
+++ b/app/src/main/res/layout/item_home_fragment.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/homeItem_parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
@@ -19,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:minHeight="120dp"
+            android:minHeight="180dp"
             android:scaleType="fitXY"
             android:src="@drawable/img_01" />
 
