--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -99,7 +99,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
-                            android:background="@drawable/shape_round_bg"
+                            android:background="@drawable/shape_round_corner_bg"
                             android:text="黄金会员"
                             android:textColor="@color/white"
                             android:textSize="10dp" />
