--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -6,25 +6,30 @@
     android:orientation="vertical"
     tools:context=".view.fragment.detail.DetailFragment">
 
-    <TextView
-        android:id="@+id/detailInfo_tv"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginTop="45dp"
-        android:background="@color/white"
-        android:gravity="center"
-        android:text="fdg" />
 
-    <View
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginTop="2dp"
-        android:background="@color/white" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginTop="2dp"
-        android:background="@color/white" />
+        <TextView
+            android:id="@+id/detailInfo_tv"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_marginTop="45dp"
+            android:background="@color/white"
+            android:gravity="center"
+            android:text="fdg"
+            android:visibility="gone"/>
+
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/detailInfo_rv"
+            android:layout_width="match_parent"
+            android:layout_marginTop="45dp"
+            android:layout_height="600dp"
+            android:descendantFocusability="blocksDescendants" />
+
+    </LinearLayout>
 
 </LinearLayout>
